@@ -26,6 +26,7 @@ import logging
 
 from sugar import env
 from sugar.graphics import style
+from sugar.graphics.canvasbutton import CanvasButton
 from sugar.graphics.canvasentry import CanvasEntry
 
 import colorpicker
@@ -130,7 +131,7 @@ class _IntroBox(hippo.CanvasBox):
         button_box = hippo.CanvasBox(orientation=hippo.ORIENTATION_HORIZONTAL)
 
         if self._page != self.PAGE_FIRST:
-            back_button = hippo.CanvasButton(text=_('Back'))
+            back_button = CanvasButton(_('Back'), 'go-left')
             back_button.connect('activated', self._back_activated_cb)
             button_box.append(back_button)
 
@@ -138,15 +139,15 @@ class _IntroBox(hippo.CanvasBox):
         button_box.append(spacer, hippo.PACK_EXPAND)
 
         if self._page == self.PAGE_LAST:
-            self._next_button = hippo.CanvasButton(text=_('Done'))
+            self._next_button = CanvasButton(_('Done'), 'go-right')
             self._next_button.connect('activated', self._done_activated_cb)
-            button_box.append(self._next_button)
         else:
-            self._next_button = hippo.CanvasButton(text=_('Next'))
+            self._next_button = CanvasButton(_('Next'), 'go-right')
             self._next_button.connect('activated', self._next_activated_cb)
-            button_box.append(self._next_button)
 
         self._update_next_button()
+        button_box.append(self._next_button)
+
         self._current_page.connect('notify::valid',
                                    self._page_valid_changed_cb)
 
