@@ -1,3 +1,5 @@
+* #2163 Arrow icons in the intro screen buttons. (marco)
+
 Snapshot 4c352d1f83
 
 * Adapt to the datastore API changes. (tomeu)
